@@ -13,7 +13,7 @@
     </dt>
 
     <dd class="portletItem">
-        <metal:macro use-macro="context/social_bookmarks_view/macros/bookmarks" />
+        <div tal:replace="structure provider:sc.social.bookmarks.provider" />
     </dd>
 
 </dl>
